--- a/tiantian/20180308.html
+++ b/tiantian/20180308.html
@@ -9,8 +9,10 @@
     <div id="msg">
         <h1>甜甜, 女神节快乐</h1>
     </div>
-
-    <canvas id="rose"></canvas>
+    <div id="rose">
+        <canvas id="can-rose"></canvas>
+    </div >
+    
     <script src="js/20180308.js">
     </script>
 </body>
